<resources>
    <string name="app_name">Micro Bill 微账单</string>
    <string name="new_record">📝Record here开始记录</string>
    <string name="records">📊View records here历史记录</string>
    <string name="action_about">with regard to</string>
    <string name="income">earning总收入</string>
    <string name="pay">expenditure总支出</string>
    <string name="all">all</string>
    <string name="plus">+</string>
    <string name="subtract">-</string>
    <string name="everywhere">📍Track assets in real time</string>
    <string name="type">mold</string>
    <string name="account">account number</string>
    <string name="amount">sum of money</string>
    <string name="remark">comments on a form</string>
    <string name="time">time</string>
    <string name="clickcopy">(Click to copy account)</string>
    <string name="wechat">wechat</string>
    <string name="qq">QQ</string>
    <string name="wechat_no">7840041</string>
    <string name="qq_no">7840041</string>
    <string name="myname">张宇Zhang Yu</string>
    <string name="author">author</string>
    <string name="about">about</string>
    <string name="about_me">about me</string>
    <string name="about_app">about</string>
    <string name="intro_app">a list</string>
    <string name="version_string">version</string>
    <string name="version">29</string>
    <string name="incomesource">Income allocation</string>
    <string name="incomeaccount">account of receipts</string>
    <string name="incomeamount">amount received</string>
    <string name="incometype">income stream</string>
    <string name="paysource">Source of expenditure</string>
    <string name="payaccount">account payments</string>
    <string name="payamount">amount paid</string>
    <string name="paytype">Destination of expenditure</string>
    <string name="shortcut">stenography</string>
    <string name="back">back返回</string>
    <string name="thisisallrecords">This is records历史</string>
    <string name="btn_records">record of your happiness开心记下</string>
    <string name="settings">set up设置</string>
    <string name="share" >go shares导入导出分享</string>
    <string name="sound_record">Voice Accounting</string>
    <string name="new_account">🏦Manage account</string>
    <string name="new_incomesource" >💹Manage revenue sources</string>
    <string name="new_paytype" >💳management expenditure allocation</string>
    <string name="_0_00">0.00</string>
    <string name="cashsurplus">cash surplus 总结余</string>
    <string name="Pleaseenterthecontent">Please enter the content</string>
    <string name="quickly">quickly</string>
    <string name="pls">pls rcd its vry impt for yrslf</string>
</resources>
