<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:background="#FFFBC5" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#FFFBC5">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/everywhere"
            android:textSize="26sp"
            android:background="#FFFBC5"
            android:gravity="center"/>

        <Button
            android:id="@+id/button_new_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/new_record"
            android:textSize="26sp"
            android:background="#FFFBC5"
            style="@style/Widget.AppCompat.Button" />

        <Button
            android:id="@+id/button_records"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/records"
            android:textSize="26sp"
            android:background="#FFFBC5"
            style="@style/Widget.AppCompat.Button" />

        <Button
            android:background="#FFFBC5"
            android:id="@+id/button_main_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/back"
            android:textSize="26sp"
            android:textAlignment="center"
            android:gravity="center" />



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/income"
                android:background="#FFFBC5"
                android:textSize="26sp" />

            <Button
                android:id="@+id/text_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="#FFFBC5"
                android:text="@string/_0_00"
                android:textSize="26sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="#FFFBC5"
                android:text="@string/pay"
                android:textSize="26sp" />

            <Button
                android:id="@+id/text_pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="#FFFBC5"
                android:text="0.00"
                android:textSize="26sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="#FFFBC5"
                android:text="@string/cashsurplus"
                android:textSize="26sp" />

            <Button
                android:id="@+id/text_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="0.00"
                android:background="#FFFBC5"
                android:textSize="26sp"
                android:textStyle="bold" />
        </LinearLayout>


        <Button
            android:id="@+id/button_new_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/new_account"
            android:textSize="26sp"
            android:background="#FFFBC5"
            style="@style/Widget.AppCompat.Button" />

        <Button
            android:id="@+id/button_new_incometype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/new_incomesource"
            android:textSize="26sp"
            android:background="#FFFBC5"
            style="@style/Widget.AppCompat.Button" />

        <Button
            android:id="@+id/button_new_paytype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/new_paytype"
            android:textSize="26sp"
            android:background="#FFFBC5"
            style="@style/Widget.AppCompat.Button" />


        <Button
            android:id="@+id/button_home_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/settings"
            android:textSize="26sp"
            android:textColor="#000000"
            android:background="#FFFBC5"
            style="@style/Widget.AppCompat.Button" />

        <Button
            android:id="@+id/button_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/share"
            android:textSize="26sp"
            android:textColor="#000000"
            android:background="#FFFBC5"
            style="@style/Widget.AppCompat.Button" />
        <Button
            android:id="@+id/button_main_about_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/about_app"
            android:textColor="#000000"
            android:textSize="26sp"
            android:background="#FFFBC5" />
    </LinearLayout>
</ScrollView>