<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="#FFFBC5">  <!-- 背景改为米白色 -->

    <LinearLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    android:background="#FFFBC5">
    <View
        android:layout_width="match_parent"
        android:layout_height="3333dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/thisisallrecords"
            android:textColor="#000000"
            android:textSize="16sp"
            android:gravity="center" />



            <Button
                android:background="#FFFBC5"
                android:layout_gravity="center"
                android:id="@+id/button_records_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button"
                android:text="@string/income"
                android:textColor="#000000"
                android:textSize="16sp"
                android:gravity="center" />

            <Button
                android:background="#FFFBC5"
                android:layout_gravity="center"
                android:id="@+id/button_records_pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button"
                android:text="@string/pay"
                android:textColor="#000000"
                android:textSize="16sp"
                android:gravity="center" />

            <Button
                android:background="#FFFBC5"
                android:layout_gravity="center"
                android:id="@+id/button_records_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button"
                android:text="@string/all"
                android:textColor="#000000"
                android:textSize="16sp"
                android:gravity="center" />

    <Button
        android:background="#FFFBC5"
        android:id="@+id/button_records_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/back"
        android:textSize="16sp"
        android:textAlignment="center"
        android:gravity="center" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="4444dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_title"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/all"
                android:textSize="16sp"
                android:textAlignment="center"
                android:gravity="center"
                />

            <ListView
                android:id="@+id/record_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="NestedScrolling" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>
